[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "uac"
dynamic = ["version"]
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
]
license = { text = "BSD" }
description = "USB Audio Class 2.0 Tutorial for the Great Scott Gadgets Cynthion"
urls = { Source = "https://github.com/greatscottgadgets/cynthion-uac-tutorial" }
readme = "README.md"
dependencies = [
    # TODO
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
uac = "uac"
